# apidbot

./: .gitignore  Dockerfile  README.md  pyproject.toml
apidbot/: __main__.py  tg.py
